devtron-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devtron-ingress
  namespace: devtroncd
spec:
    ingressClassName: nginx
    rules:
    - host: ac5ca24f2a9954d0b902d08a5cabd384-1297293539.ap-south-1.elb.amazonaws.com
      http:
        paths:
        - backend:
            service:
              name: devtron-service
              port:
                number: 80
          path: /dashboard
          pathType: ImplementationSpecific
    - host: ac5ca24f2a9954d0b902d08a5cabd384-1297293539.ap-south-1.elb.amazonaws.com
      http:
        paths:
        - backend:
            service:
              name: devtron-service
              port:
                number: 80
          path: /orchestrator
          pathType: ImplementationSpecific
